Fix for AWS EC2 quasi-CentOS

--- a/base.env
+++ b/base.env
@@ -10,9 +10,16 @@ case `uname -s` in
         if [ -f /etc/lsb-release ]; then
             . /etc/lsb-release
             OS_DISTRO=`echo $DISTRIB_ID | tr A-Z a-z`
-        fi
-        if [ -f /etc/centos-release ]; then
+        elif [ -f /etc/centos-release ]; then
             OS_DISTRO=centos
+        elif [ -f /etc/os-release ]; then
+            egrep -q '^ID_LIKE=.*rhel' /etc/os-release
+            if [ $? -eq 0 ]; then
+                OS_DISTRO=centos
+            else
+                echo "UNKNOWN AMI OS"
+                exit 1
+            fi
         fi
         # OS_DISTRO possible values: ubuntu
     ;;
