--- a/define-example-cluster.env
+++ b/define-example-cluster.env
@@ -1,9 +1,7 @@
 #!/bin/sh
 
-source ./corfu-cluster.sh
-
 # General notes:
-#
+# + Start counting at zero.
 # + Use completely unique port numbers to allow easy use on single machine.
 # + Use completely unique local paths to allow easy use on single machine.
 
@@ -14,45 +12,41 @@ CORFU_SRC_DIR=/Users/sfritchie/vsrc/CorfuDB
 
 CORFU_LOG_DIR=/Users/sfritchie/vsrc/CorfuDB/tmp
 
+CORFU_SEQUENCER_TYPE_0=disk # disk | memory
+CORFU_SEQUENCER_PORT_0=`expr $CORFU_BASE_PORT + 0`
+CORFU_SEQUENCER_HOST_0=localhost
+CORFU_SEQUENCER_DEBUG_0=INFO # ERROR,WARN,INFO,DEBUG,TRACE [default: INFO]
+
 CORFU_SEQUENCER_TYPE_1=disk # disk | memory
 CORFU_SEQUENCER_PORT_1=`expr $CORFU_BASE_PORT + 1`
 CORFU_SEQUENCER_HOST_1=localhost
 CORFU_SEQUENCER_DEBUG_1=INFO # ERROR,WARN,INFO,DEBUG,TRACE [default: INFO]
 
-CORFU_SEQUENCER_TYPE_2=disk # disk | memory
-CORFU_SEQUENCER_PORT_2=`expr $CORFU_BASE_PORT + 2`
-CORFU_SEQUENCER_HOST_2=localhost
-CORFU_SEQUENCER_DEBUG_2=INFO # ERROR,WARN,INFO,DEBUG,TRACE [default: INFO]
-
 # Layout config
 
 CORFU_LOG_DIR=/Users/sfritchie/vsrc/CorfuDB/tmp
+
+CORFU_LAYOUT_TYPE_0=disk # disk | memory
+CORFU_LAYOUT_PORT_0=`expr $CORFU_BASE_PORT + 10`
+CORFU_LAYOUT_HOST_0=localhost
+CORFU_LAYOUT_DEBUG_0=INFO # ERROR,WARN,INFO,DEBUG,TRACE [default: INFO]
 
 CORFU_LAYOUT_TYPE_1=disk # disk | memory
 CORFU_LAYOUT_PORT_1=`expr $CORFU_BASE_PORT + 11`
 CORFU_LAYOUT_HOST_1=localhost
 CORFU_LAYOUT_DEBUG_1=INFO # ERROR,WARN,INFO,DEBUG,TRACE [default: INFO]
 
-CORFU_LAYOUT_TYPE_2=disk # disk | memory
-CORFU_LAYOUT_PORT_2=`expr $CORFU_BASE_PORT + 12`
-CORFU_LAYOUT_HOST_2=localhost
-CORFU_LAYOUT_DEBUG_2=INFO # ERROR,WARN,INFO,DEBUG,TRACE [default: INFO]
-
 # Log config
 
 CORFU_LOG_DIR=/Users/sfritchie/vsrc/CorfuDB/tmp
+
+CORFU_LOG_TYPE_0=disk # disk | memory
+CORFU_LOG_PORT_0=`expr $CORFU_BASE_PORT + 20`
+CORFU_LOG_HOST_0=localhost
+CORFU_LOG_DEBUG_0=INFO # ERROR,WARN,INFO,DEBUG,TRACE [default: INFO]
 
 CORFU_LOG_TYPE_1=disk # disk | memory
 CORFU_LOG_PORT_1=`expr $CORFU_BASE_PORT + 21`
 CORFU_LOG_HOST_1=localhost
 CORFU_LOG_DEBUG_1=INFO # ERROR,WARN,INFO,DEBUG,TRACE [default: INFO]
 
-CORFU_LOG_TYPE_2=disk # disk | memory
-CORFU_LOG_PORT_2=`expr $CORFU_BASE_PORT + 22`
-CORFU_LOG_HOST_2=localhost
-CORFU_LOG_DEBUG_2=INFO # ERROR,WARN,INFO,DEBUG,TRACE [default: INFO]
-
-# test/debugging only
-echo RUN: `corfu_fmt_sequencer_cmd 1`
-echo RUN: `corfu_fmt_layout_cmd 1`
-echo RUN: `corfu_fmt_log_cmd 1`
