--- a/corfu-example-cluster.env
+++ b/corfu-example-cluster.env
@@ -1,52 +1,47 @@
 #!/bin/sh
 
 # General notes:
-# + Start counting at zero.
+# + Start counting server instances at zero.
 # + Use completely unique port numbers to allow easy use on single machine.
 # + Use completely unique local paths to allow easy use on single machine.
 
 CORFU_BASE_PORT=8000
 CORFU_SRC_DIR=/Users/sfritchie/vsrc/CorfuDB
+CORFU_LOG_DIR=$CORFU_SRC_DIR/tmp
 
 # Sequencer config
-
-CORFU_LOG_DIR=/Users/sfritchie/vsrc/CorfuDB/tmp
 
 CORFU_SEQUENCER_TYPE_0=disk # disk | memory
 CORFU_SEQUENCER_PORT_0=`expr $CORFU_BASE_PORT + 0`
 CORFU_SEQUENCER_HOST_0=localhost
 CORFU_SEQUENCER_DEBUG_0=INFO # ERROR,WARN,INFO,DEBUG,TRACE [default: INFO]
 
-CORFU_SEQUENCER_TYPE_1=disk # disk | memory
+CORFU_SEQUENCER_TYPE_1=disk
 CORFU_SEQUENCER_PORT_1=`expr $CORFU_BASE_PORT + 1`
 CORFU_SEQUENCER_HOST_1=localhost
-CORFU_SEQUENCER_DEBUG_1=INFO # ERROR,WARN,INFO,DEBUG,TRACE [default: INFO]
+CORFU_SEQUENCER_DEBUG_1=INFO
 
 # Layout config
 
-CORFU_LOG_DIR=/Users/sfritchie/vsrc/CorfuDB/tmp
-
-CORFU_LAYOUT_TYPE_0=disk # disk | memory
+CORFU_LAYOUT_TYPE_0=disk
 CORFU_LAYOUT_PORT_0=`expr $CORFU_BASE_PORT + 10`
 CORFU_LAYOUT_HOST_0=localhost
-CORFU_LAYOUT_DEBUG_0=INFO # ERROR,WARN,INFO,DEBUG,TRACE [default: INFO]
+CORFU_LAYOUT_DEBUG_0=INFO
 
-CORFU_LAYOUT_TYPE_1=disk # disk | memory
+CORFU_LAYOUT_TYPE_1=disk
 CORFU_LAYOUT_PORT_1=`expr $CORFU_BASE_PORT + 11`
 CORFU_LAYOUT_HOST_1=localhost
-CORFU_LAYOUT_DEBUG_1=INFO # ERROR,WARN,INFO,DEBUG,TRACE [default: INFO]
+CORFU_LAYOUT_DEBUG_1=INFO
 
 # Log config
 
-CORFU_LOG_DIR=/Users/sfritchie/vsrc/CorfuDB/tmp
-
-CORFU_LOG_TYPE_0=disk # disk | memory
+CORFU_LOG_TYPE_0=disk
 CORFU_LOG_PORT_0=`expr $CORFU_BASE_PORT + 20`
 CORFU_LOG_HOST_0=localhost
-CORFU_LOG_DEBUG_0=INFO # ERROR,WARN,INFO,DEBUG,TRACE [default: INFO]
+CORFU_LOG_DEBUG_0=INFO
 
-CORFU_LOG_TYPE_1=disk # disk | memory
+CORFU_LOG_TYPE_1=disk
 CORFU_LOG_PORT_1=`expr $CORFU_BASE_PORT + 21`
 CORFU_LOG_HOST_1=localhost
-CORFU_LOG_DEBUG_1=INFO # ERROR,WARN,INFO,DEBUG,TRACE [default: INFO]
+CORFU_LOG_DEBUG_1=INFO
 
