Add corfu-delete-console-dir.sh & corfu-delete-all-console-dirs.sh

--- a/corfu-example-cluster.env
+++ b/corfu-example-cluster.env
@@ -7,7 +7,10 @@
 
 CORFU_BASE_PORT=8000
 CORFU_SRC_DIR=/Users/sfritchie/vsrc/CorfuDB
-CORFU_LOG_DIR=$CORFU_SRC_DIR/tmp
+CORFU_INSTANCE_PREFIX=$CORFU_SRC_DIR/tmp
+CORFU_LOG_PREFIX=$CORFU_INSTANCE_PREFIX/log
+CORFU_CONSOLE_PREFIX=$CORFU_INSTANCE_PREFIX/console
+CORFU_PID_PREFIX=$CORFU_INSTANCE_PREFIX/pid
 
 # Sequencer config
 
