Add missing support for memory mode servers (corfu_server -m)

--- a/corfu-example-cluster.env
+++ b/corfu-example-cluster.env
@@ -14,6 +14,9 @@ CORFU_PID_PREFIX=$CORFU_INSTANCE_PREFIX/pid
 
 # Sequencer config
 
+# From Dahlia: (iii) in case of a sequencer failures, a recovery
+# sequencer is available to be deployed.
+
 CORFU_SEQUENCER_TYPE_0=disk # disk | memory
 CORFU_SEQUENCER_PORT_0=`expr $CORFU_BASE_PORT + 0`
 CORFU_SEQUENCER_HOST_0=localhost
@@ -26,6 +29,9 @@ CORFU_SEQUENCER_DEBUG_1=INFO
 
 # Layout config
 
+# From Dahlia: (ii) there exists a quorum of layout-servers, who can
+# drive a configuration-change consensus decision.
+
 CORFU_LAYOUT_TYPE_0=disk
 CORFU_LAYOUT_PORT_0=`expr $CORFU_BASE_PORT + 10`
 CORFU_LAYOUT_HOST_0=localhost
@@ -36,7 +42,15 @@ CORFU_LAYOUT_PORT_1=`expr $CORFU_BASE_PORT + 11`
 CORFU_LAYOUT_HOST_1=localhost
 CORFU_LAYOUT_DEBUG_1=INFO
 
+CORFU_LAYOUT_TYPE_2=disk
+CORFU_LAYOUT_PORT_2=`expr $CORFU_BASE_PORT + 12`
+CORFU_LAYOUT_HOST_2=localhost
+CORFU_LAYOUT_DEBUG_2=INFO
+
 # Log config
+
+# From Dahlia: (i) I.e., every replication chain has at least one
+# surviving member,
 
 CORFU_LOG_TYPE_0=disk
 CORFU_LOG_PORT_0=`expr $CORFU_BASE_PORT + 20`
