Add more notes to example config

--- a/corfu-example-cluster.env
+++ b/corfu-example-cluster.env
@@ -1,15 +1,55 @@
 #!/bin/sh
 
 # General notes:
+#
+# + These scripts assume that you're running them with your $CWD / current
+#   working directory is at the top of this Git repo.  They will not work
+#   correctly if this assumption is violated.
+#
+# + These scripts have been developed for use on a single developer machine.
+#
+# + These scripts are intended to be useful for multi-machine/-VM
+#   settings, but they are not yet finished for multi-machine/-VM use.
+#
+# + Assume that all machines are homogenous with respect to local file
+#   system directory usage: the CorfuDB source dir (with all artifacts
+#   already compiled!) uses the same path, the log units use the same
+#   directory prefix for their storage, etc.
+#
 # + Start counting server instances at zero.
-# + Use completely unique port numbers to allow easy use on single machine.
-# + Use completely unique local paths to allow easy use on single machine.
+#
+# + Use unique port numbers to allow easy use on single machine.
+#
+# + Use unique local paths to allow easy use on single machine.
 
+# Quick-start method for start a full CorfuDB on a single machine:
+#
+# 1. Edit the value of CORFU_SRC_DIR below to be the top of your local
+#    *compiled* CorfuDB source repo.
+#
+# 2. killall java
+#    ... if you have doubts about what CorfuDB processes may be running.
+#
+# 3. ./corfu-start-all-servers.sh ./corfu-example-cluster.env
+#
+# 4. ./corfu-bootstrap-cluster.sh ./corfu-example-cluster.env
+
+# All server instances will use TCP ports starting at this value.
 CORFU_BASE_PORT=8000
+
+# Path to source + compiled stuff. Mostly assumes 'bin' subdir exists.
 CORFU_SRC_DIR=/Users/sfritchie/vsrc/CorfuDB
+
+# alternative? /var/run/corfudb
 CORFU_INSTANCE_PREFIX=$CORFU_SRC_DIR/tmp
+
+# alternative? /var/db/corfudb
 CORFU_LOG_PREFIX=$CORFU_INSTANCE_PREFIX/log
+
+# alternative? /var/run/corfudb/console
 CORFU_CONSOLE_PREFIX=$CORFU_INSTANCE_PREFIX/console
+
+# alternative? /var/run/corfudb/pid
 CORFU_PID_PREFIX=$CORFU_INSTANCE_PREFIX/pid
 
 # Sequencer config
