Changes to Pony config for Wallaroo 0.2 release prep

--- a/base.env
+++ b/base.env
@@ -10,6 +10,9 @@ case `uname -s` in
         if [ -f /etc/lsb-release ]; then
             . /etc/lsb-release
             OS_DISTRO=`echo $DISTRIB_ID | tr A-Z a-z`
+            # Sourcing /etc/lsb-release has defined DISTRIB_* variables for us.
+            # The DISTRIB_CODENAME and DISTRIB_RELEASE are most useful to
+            # these scripts.
         elif [ -f /etc/centos-release ]; then
             OS_DISTRO=centos
         elif [ -f /etc/os-release ]; then
